compiler/weave_syntax/tests/data/syntax/statements/err0001.error
error: Expected '{'
        --> <source>:1:11
         |
       1 | public if let x(y) = 42 {
         |           ^^^
error: Expected '}'
        --> <source>:7:1
         |
       7 | 
         | ^
